# GStreamerWindowsTest

./: .gitignore  CMakeLists.txt  GStreamerConfig.h  GStreamerConfig.h.in  README.md  gstreamer.cpp  run.bat
